# bandcamp-dl

./: .gitignore  .pypirc  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  MANIFEST.in  README  README.md  README.rst  bandcamp-dl.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.md  ISSUE_TEMPLATE.rst
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-to-test-pypi.yml
bandcamp-dl/: Bandcamp.py  BandcampDownloader.py  bandcamp-dl.py  jsobj.py
bandcamp_dl/: Bandcamp.py  BandcampDownloader.py  Bandcamp_Download.py  __init__.py  __main__.py  bandcamp.py  bandcamp_dl.py  bandcampdownloader.py  bandcampjson.py  config.py  deps.txt  jsobj.py
bandcamp_dl/utils/: LICENSE-Unicode-Slugify  clean_print.py  config.py  requests_patch.py  unicode_slugify.py
py-js-object-parser-master/py-js-object-parser-master/: README.md
